feature: Добавил обновление пароля
